구축 md파일 수정

--- a/working_History/README_모음/검색엔진_기능_구축.md
+++ b/working_History/README_모음/검색엔진_기능_구축.md
@@ -11,3 +11,6 @@ spring batch를 활용해서 , RDB에 있는 검색관련 정보들을 join-sele
 >
 >따라서 부분(upload , delete) 이벤트만 실행하는 batch를 하나 더 개발해서 , 부분 batch는 전체 batch보다 짧은 주기로 동작하게끔 하는 방안을 고려중
 
+### 첫번째 결과
+Spring Batch Job에서 , JPA로 RDB 데이터를 모두 Select 한 후 , 프로세싱한뒤 elasticSearch에 색인하였습니다.
+- [SpringBatch_Application](../BackEnd_Spring/searchFunctionTest/indexInitBatch/)
