SLO vs DLO 업로드 방식 추가

--- a/working_History/README_모음/미디어콘텐츠_처리.md
+++ b/working_History/README_모음/미디어콘텐츠_처리.md
@@ -108,8 +108,43 @@ PresignedURL을 사용하지 못하고 , ***X-Auth-Token***을 사용해 object 
 ![upload-process-diagram](/working_History/Images/uploadProcess.png)
 
 
-### slo 업로드 방식
-#### **중요 고려사항**
+### 대용량 파일 Object Storage 업로드 방안 두가지
+일단 DLO , SLO 모두 하나의 큰 오브젝트를 여러개의 작은 오브젝트로 분할하여 나눠 저장하는것은 동일합니다.
+#### 1. DLO(Dynamic Large Object) 방식
+나눠 저장한 후 , 다운로드 요청 시 **동적으로 나눠진 작은 오브젝트를 연결하여 전체 큰 오브젝트로 제공**
+
+***장점 :***
+
+    DLO 방식은 , 객체가 오브젝트 스토리지에 들어간 이후에도 추가 객체를 쉽게 추가할 수 있습니다.
+    
+    동적으로 객체 크기를 확장하거나 축소할 수 있습니다.
+
+***단점 :***
+    
+    세그먼트 관리가 필요하며 , 전체 객체를 읽을 때 순차적으로 읽어와야 합니다.
+
+#### 2. SLO(Static Large Object) 방식
+나눠 저장할 때 , **manifest Object Json 파일**을 생성합니다.
+
+해당 파일은 각 세그먼트의 위치 , 크기 , 메타데이터를 정의해 놓고 있기 때문에 , 정의된 이후엔 세그먼트를 변경할 수 없습니다.
+
+***장점 :***
+
+    세그먼트 목록이 고정되어 있어서, 세그먼트 관리에 용이하며 일관된 읽기 성능을 제공
+
+    세그먼트들의 위치 및 순서가 명확해서 관리가 편함 
+
+***단점 :***
+    
+    세그먼트가 미리 정의되어 있기에 , 동적으로 크기를 변경하려면 새로운 SLO를 생성해야 함.
+
+#### SLO 방식을 채택함,. 그 이유는 ?
+Object Storage에 대용량 파일이 업로드될 예정이기 때문에 세그먼트로 분할하긴 했어야 했습니다. 따라서 DLO와 SLO중 한가지를 선택해야만 했는데 , 업로드 대상 파일이 차후 변경될 가능성이 없고 (변경되면 안됌) 읽기 성능(다운로드) 가 중요했으며 , bucket이 세그먼트별로 분할되어 저장할 확률이 있었기 때문에 , 
+
+>중앙 집중 관리가 용이하고 읽기 성능이 일관되며 , 차후 변경가능성이 없기에 SLO 방식을 채택하게 되었습니다.
+
+
+#### **SLO 중요 고려사항**
 ***SLO (Static large object) 방식으로 파일을 업로드하기 위해선 !! chunk를 나눌 때 , ffmpeg와같은 특정솔루션을 통해 나누는것이 아니라 , Byte단위의 데이터로 쪼개야 합니다 !!***
 
 ### slo 다운로드 방식에 대한 고찰
