RAEDME 추가 : 고려사항 추가 및 테이블정보 추가

--- a/working_History/BackEnd_Spring/searchFunctionTest/indexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/indexInitBatch/사용방안.md
@@ -13,6 +13,36 @@ batch 생성 스키마 정리
 ElasticSearch 형태소분석 참고문서
 - https://esbook.kimjmin.net/06-text-analysis/6.7-stemming/6.7.2-nori
 
+## RDB Table 정보
+전체 정보 테이블과 , 카테고리 테이블로 나뉩니다.
+
+이 두가지 테이블을 Join하여 ElasticSearch에 색인할 예정입니다.
+
+### 1. firstInfo Table
+- 실제 데이터값이 저장되는 테이블 입니다.
+
+|컬럼 명|Data Type|요약 정보|비고|
+|------|---|---|--|
+|firstInfoId|int|row별 Id 값|PK|
+|name|varchar(20)|컬럼이름|-|
+|age|int|더미 int값 넣음|-|
+
+### 2.  category_table
+- 각 컬럼별 카테고리가 저장된 테이블입니다.
+
+|컬럼 명|Data Type|요약 정보|비고|
+|------|---|---|--|
+|category_seq|int|row별 식별자 int값 (auto_increment) |-|
+|firstInfoId|int|firstInfo Table의 firstIdInfo 값을 외래키로 지정|FK|
+|category|varchar(20)|카테고리 명|-|
+
+### Join Query
+- 수행할 Join Query는 다음과 같습니다.
+
+```Query
+select firstInfo.firstInfoId, name, age, category from firstInfo join category_table on firstInfo.firstInfoId = category_table.firstInfoId;
+```
+
 ## ElasticSearch 세팅
 카테고리 , 이름 , age 별 검색이 가능해야 하기 때문에 doc 들에 대한 형태소 분석이 가능해야 합니다.
 
