--- a/working_History/README_모음/검색엔진_기능_구축.md
+++ b/working_History/README_모음/검색엔진_기능_구축.md
@@ -13,4 +13,22 @@ spring batch를 활용해서 , RDB에 있는 검색관련 정보들을 join-sele
 
 ### 첫번째 결과
 Spring Batch Job에서 , JPA로 RDB 데이터를 모두 Select 한 후 , 프로세싱한뒤 elasticSearch에 색인하였습니다.
+>현재는 RDB의 전체 데이터를 JobSchuduler에 맞게 elasticSearch에 색인중 입니다.
 - [SpringBatch_Application](../BackEnd_Spring/searchFunctionTest/indexInitBatch/)
+
+또한 ElasticSearch High Level Rest API를 통해 색인된 doc 들을 검색하는 API를 개발하였습니다.
+>합성어 별 검색이 가능하게끔 구현하였습니다.
+- [SpringBoot_Search_Application](../BackEnd_Spring/searchFunctionTest/searchAPI/)
+
+#### 고려해야될 사항 및 추가 개발사항
+**1. 카테고리 종류**
+
+현재는 카테고리가 1Depth만 존재하는데 , 최소 2Depth까지 들어가도록 개발해야합니다.
+- 카테고리 관리 테이블이 따로있어야할듯
+
+**2. 검색 우선순위**
+
+현재는 Id값을 기반으로 검색 결과가 오름차순 정렬하게끔 되어 있는데, 아래 요구사항대로 정렬되어야 합니다.
+
+- 요구사항
+    - 만약 ```우주정거장``` 이라는 검색어가 검색됐다면 , 우선순위를 ```우주정거장``` 전체가 match되는 doc이 최 상단으로 추출되고 , 그 후 어미별 좌측부터 우측으로 ```우주``` 추출 , ```정거장``` 순으로 추출되어야 합니다.
