--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -1,4 +1,27 @@
 # Batch Project 사용방안
+## 사전 사항 - elasticsearch 구축
+elastic Search를 아래 문서를 따라 구축합니다.
+
+### ***주의***
+elastic search API들은 elastic search에 접근할 때 , 토큰기반 인증 또는 ID & PWD 기반 인증을 해야 합니다.
+
+**따라서 elasticsearch를 구축할 때 , 유저를 같이 생성해줘야 합니다.**
+
+- [엘라스틱서치 구축 방안](../../../../DevOps_solutions/Elastic_모음/README.md#elasticsearch-id--password-생성---로컬-환경)
+
+## overview
+- elasticsearch bulk vs save
+
+bulk API를 통해 색인을 진행합니다.
+- 모든 데이터를 색인하기 때문에 , 성능 향상을 위해서 bulk API로 진행합니다.
+
+bulk API 는 , 
+
+    Elasticsearch의 Bulk API는 다수의 인덱스/업데이트/삭제 작업을 단일 API 호출로 실행할 수 있게 해주는 기능입니다. 
+
+    이를 통해 데이터를 대량으로 Elasticsearch에 삽입하거나, 
+
+    여러 작업을 한 번의 호출로 실행할 수 있습니다.
 
 ## 참고 문서
 batch 사용방안 정리
@@ -296,6 +319,15 @@ Reader에서 반환받은 InfoDto 엔티티를 InfoDtoIndex 엔티티로 변환 
 
 ### Writer 생성
 Processor 계층에서 변환된 InfoDtoIndex 엔티티들을 모두 elasticSearch에 색인 합니다.
+
+색인 시 , _bulk API를 통해서 색인합니다.
+- [bulk API 관련 문서](https://esbook.kimjmin.net/04-data/4.3-_bulk)
+>save와 bulk 두가지중 고민
+> 
+>save : 단일 데이터를 색인하기 위해 설계됨
+>bulk : 여러개 데이터 (대량) 를 색인하기 위해 설계됨
+> 
+>위 테스트 코드는 RDB의 전체 데이터를 색인하기 때문에 , bulk 사용
 
 - [Writer Code](./src/main/java/com/example/indexinitbatch/elasticIndexing/Service/Writer)
 
