elasticIndexing 고찰 및 DB 테이블 수정

--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -23,6 +23,22 @@ bulk API 는 ,
 
     여러 작업을 한 번의 호출로 실행할 수 있습니다.
 
+- [bulk API 관련정보](https://esbook.kimjmin.net/04-data/4.3-_bulk)
+
+bulk API는 json파일로 색인되게 됩니다.
+```bash
+# bulk.json 파일 내용
+{"index":{"_index":"test","_id":"1"}}
+{"field":"value one"}
+{"index":{"_index":"test","_id":"2"}}
+{"field":"value two"}
+{"delete":{"_index":"test","_id":"2"}}
+{"create":{"_index":"test","_id":"3"}}
+{"field":"value three"}
+{"update":{"_index":"test","_id":"1"}}
+{"doc":{"field":"value two"}}
+```
+
 ## 참고 문서
 batch 사용방안 정리
 - https://velog.io/@cho876/Spring-Batch-job-%EC%83%9D%EC%84%B1
@@ -37,27 +53,55 @@ ElasticSearch 형태소분석 참고문서
 - https://esbook.kimjmin.net/06-text-analysis/6.7-stemming/6.7.2-nori
 
 ## RDB Table 정보
-전체 정보 테이블과 , 카테고리 테이블로 나뉩니다.
+전체 정보 테이블과 , 대분류 카테고리 테이블, 중분류 카테고리 테이블로 나뉩니다.
 
-이 두가지 테이블을 Join하여 ElasticSearch에 색인할 예정입니다.
+이 세가지 테이블을 Join하여 ElasticSearch에 색인할 예정입니다.
+>차후 고정된 대분류와 중분류가 늘어나거나 줄어들 수 있기 떄문에 , 카테고리값만을 관리하는 테이블을 생성하고, 둘을 연결짓는 테이블로 나누었습니다.
 
 ### 1. firstInfo Table
 - 실제 데이터값이 저장되는 테이블 입니다.
 
-|컬럼 명|Data Type|요약 정보|비고|
-|------|---|---|--|
-|firstInfoId|int|row별 Id 값|PK|
-|name|varchar(20)|컬럼이름|-|
-|age|int|더미 int값 넣음|-|
+| 컬럼 명          |Data Type| 요약 정보        |비고|
+|---------------|---|--------------|--|
+| firstInfoId   |int| row별 Id 값    |PK|
+| name          |varchar(20)| 컬럼이름         |-|
+| age           |int| 더미 int값 넣음   |-|
 
-### 2.  category_table
-- 각 컬럼별 카테고리가 저장된 테이블입니다.
+### 2.  main_category
+- 대분류 카테고리 정보를 관리하는 테이블 입니다.
 
-|컬럼 명|Data Type|요약 정보|비고|
-|------|---|---|--|
-|category_seq|int|row별 식별자 int값 (auto_increment) |-|
-|firstInfoId|int|firstInfo Table의 firstIdInfo 값을 외래키로 지정|FK|
-|category|varchar(20)|카테고리 명|-|
+| 컬럼 명              | Data Type   | 요약 정보       | 비고 |
+|-------------------|-------------|-------------|----|
+| main_category_seq | int | row별 식별자 값 (auto_increment)   | pk |
+| main_category     | varchar(20) | 대분류 카테고리 명  | -  |
+
+### 3.  sub_category
+- 중분류 카테고리 정보를 관리하는 테이블 입니다.
+
+| 컬럼 명             | Data Type   | 요약 정보       | 비고                  |
+|------------------|-------------|-------------|---------------------|
+| sub_category_seq | int         | row별 식별자 값 (auto_increment)   | pk |
+| sub_category     | varchar(20) | 중분류 카테고리 명  | -                   |
+
+
+### 4.  main_ref_table
+- firstInfo Table과 대분류 category 테이블을 연결짓는 테이블 입니다.
+
+| 컬럼 명         | Data Type   | 요약 정보                                   | 비고 |
+|--------------|-------------|-----------------------------------------|----|
+| ref_seq      | int         | row별 식별자 값            | PK |
+| firstInfoId  | int         | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
+| main_category_seq | varchar(30) | 대분류 카테고리 식별자                            | FK |
+
+
+### 5.  sub_ref_table
+- firstInfo Table과 중분류 category 테이블을 연결짓는 테이블 입니다.
+
+| 컬럼 명             | Data Type   | 요약 정보                                   | 비고 |
+|------------------|-------------|-----------------------------------------|----|
+| ref_seq          | int         | row별 식별자 값 (auto_increment)             | PK |
+| firstInfoId      | int         | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
+| sub_category_seq | varchar(30) | 중분류 카테고리 식별자                            | FK |
 
 ### Join Query
 - 수행할 Join Query는 다음과 같습니다.
@@ -303,6 +347,9 @@ elasticSearch로 ```InfoDtoIndex``` 를 색인해야하기 때문에 , 어노테
 - [InfoDtoIndex Code](./src/main/java/com/example/indexinitbatch/elasticIndexing/Entity/InfoDtoIndex.java)
 >각 어노테이션 별 설명은 주석 처리 해두었 습니다.
 
+### ElasticsearchTemplate 메서드 초기화
+색인되는 데이터가 바로바로 검색될 수 있게끔 , ElasticsearchTemplate 메서드를 재 정의하여 사용합니다.
+- [ElasticTemplateGlobalConfig 재정의](./src/main/java/com/example/indexinitbatch/elasticIndexing/Config/ElasticTemplateGlobalConfig.java)
 
 ### Reader 생성
 RDB에 저장된 각 필드별 카테고리를 elasticSearch에 색인 해야 하기에 , 카테고리 테이블 , 메인 테이블을 Join한 쿼리를 수행 하여 결과를 리턴받습니다.
