DB 변경 및 코드전체수정

--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -84,31 +84,47 @@ ElasticSearch 형태소분석 참고문서
 | sub_category     | varchar(20) | 중분류 카테고리 명  | -                   |
 
 
-### 4.  main_ref_table
-- firstInfo Table과 대분류 category 테이블을 연결짓는 테이블 입니다.
+### 4.  tb_ref
+- firstInfo Table과 대분류 및 중분류 category 관리 테이블을 연결짓는 테이블 입니다.
 
-| 컬럼 명         | Data Type   | 요약 정보                                   | 비고 |
-|--------------|-------------|-----------------------------------------|----|
-| ref_seq      | int         | row별 식별자 값            | PK |
-| firstInfoId  | int         | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
-| main_category_seq | varchar(30) | 대분류 카테고리 식별자                            | FK |
+| 컬럼 명         | Data Type | 요약 정보                                   | 비고 |
+|--------------|-----------|-----------------------------------------|----|
+| ref_seq      | int       | row별 식별자 값            | PK |
+| firstInfoId  | int       | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
+| main_category_seq | int       | 대분류 카테고리 식별자                            | FK |
+| sub_category_seq | int | 중분류 카테고리 식별자                            | FK |
 
 
-### 5.  sub_ref_table
-- firstInfo Table과 중분류 category 테이블을 연결짓는 테이블 입니다.
-
-| 컬럼 명             | Data Type   | 요약 정보                                   | 비고 |
-|------------------|-------------|-----------------------------------------|----|
-| ref_seq          | int         | row별 식별자 값 (auto_increment)             | PK |
-| firstInfoId      | int         | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
-| sub_category_seq | varchar(30) | 중분류 카테고리 식별자                            | FK |
 
 ### Join Query
 - 수행할 Join Query는 다음과 같습니다.
 
 ```Query
-select firstInfo.firstInfoId, name, age, category from firstInfo join category_table on firstInfo.firstInfoId = category_table.firstInfoId;
+SELECT
+    f.firstInfoId,
+    f.name as '이름',
+    f.age as '나이',
+    m.main_category as '대분류',
+    s.sub_category as '중분류'
+FROM
+    firstInfo f
+        JOIN
+    tb_ref r ON f.firstInfoId = r.firstInfoId
+        JOIN
+    tb_main_category m ON r.main_category_seq = m.main_category_seq
+        JOIN
+    tb_sub_category s ON r.sub_category_seq = s.sub_category_seq
+ORDER BY firstInfoId ASC;
 ```
+- 쿼리 수행 결과는 다음과 같습니다.
+
+| firstInfoId | 이름   | 나이 | 대분류 | 중분류   |
+|-------------|------|----|-----|-------|
+| 0           | 감자깡  | 15 | 간식  | 과자    |
+| 1           | 새우깡  | 50 | 간식  | 과자    |
+| 2           | 애플워치 | 7  | 시계  | 스마트워치 |
+...
+
 
 ## ElasticSearch 세팅
 카테고리 , 이름 , age 별 검색이 가능해야 하기 때문에 doc 들에 대한 형태소 분석이 가능해야 합니다.
@@ -127,6 +143,11 @@ $ bin/elasticsearch-plugin install analysis-nori
 
 // 제거
 $ bin/elasticsearch-plugin remove analysis-nori
+```
+
+elasticsearch를 재 시작합니다.
+```bash
+$ bin/elasticsearch restart
 ```
 
 nori 형태소분석기가 잘 설치되었는지 엘라스틱서치에 쿼리를 보내서 확인합니다.
@@ -164,6 +185,7 @@ GET _analyze
 
 nori 형태소분석기를 tokenizer로 사용해서 테스트하면 , 한국어 사전 정보를 통해 어근 , 합성어등을 분리시킬 수 있습니다.
 
+#### nori 형태소분석기 옵션들
 nori_tokenizer에는 다음과 같은 옵션이 있습니다.
 - ***user_dictionary :*** 사용자 사전이 저장된 파일의 경로를 입력합니다.
 - ***user_dictionary_rules :*** 사용자 정의 사전을 배열로 입력합니다.
@@ -237,10 +259,18 @@ nori tokenizer를 사용하는 index를 생성합니다.
 각 파라미터별 설명은 다음과 같습니다.
 - analysis의 analyzer를 custom type으로 지정 , tokenizer nori_tokenizer 지정,
 - nori_tokenizer decompound_mode를 mixed로 지정
-- name , age , category 검색이 가능
+  - ***mixed*** : 어근과 합성어를 모두 저장
+  - [nori-형태소분석기-옵션들](#nori-형태소분석기-옵션들)
+- ***category*** 필드를 ***nested*** 타입으로 지정
+  - nested 타입으로 지정함으로써, main_category와 sub_category를 계층적 구조로 검색할 수 있게끔 구성
+  - [nested 타입이란?](https://esbook.kimjmin.net/07-settings-and-mappings/7.2-mappings/7.2.5-object-nested#nested)
+- name , age , 대 / 중 분류 category 검색이 가능
   - category가 과자 라면 , 과자입니다 검색했을경우에 과자 추출
   - name이 주진성 이라면 , 주진성2, 주진성이다. 주진성입니다 검색했을 경우 주진성 추출
   - 과자 주진성 모두 검색하면 , 과자 카테고리 및 주진성 이름 추출
+  - 간식 이면서 과자인 문서 검색가능
+  - 간식들 검색 가능
+  - 과자들 검색 가능
 ```bash
 PUT info_index
 {
@@ -263,8 +293,17 @@ PUT info_index
   "mappings": {
     "properties": {
       "category": {
-        "type": "text",
-        "analyzer": "korean"
+        "type": "nested",
+        "properties": {
+          "main_category": {
+            "type": "text",
+            "analyzer": "korean"
+          },
+          "sub_category": {
+            "type": "text",
+            "analyzer": "korean"
+          }
+        }
       },
       "name": {
         "type": "text",
