디비테이블 수정

--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -83,16 +83,24 @@ ElasticSearch 형태소분석 참고문서
 | sub_category_seq | int         | row별 식별자 값 (auto_increment)   | pk |
 | sub_category     | varchar(20) | 중분류 카테고리 명  | -                   |
 
+### 4.  keyword_category
+- 키워 정보를 관리하는 테이블 입니다.
 
-### 4.  tb_ref
+| 컬럼 명        | Data Type   | 요약 정보                       | 비고                  |
+|-------------|-------------|-----------------------------|---------------------|
+| keyword_seq | int         | row별 식별자 값 (auto_increment) | pk |
+| keyword     | varchar(20) | 키워드명                        | -                   |
+
+### 5.  tb_ref
 - firstInfo Table과 대분류 및 중분류 category 관리 테이블을 연결짓는 테이블 입니다.
 
-| 컬럼 명         | Data Type | 요약 정보                                   | 비고 |
-|--------------|-----------|-----------------------------------------|----|
-| ref_seq      | int       | row별 식별자 값            | PK |
-| firstInfoId  | int       | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
+| 컬럼 명           | Data Type | 요약 정보                                   | 비고 |
+|----------------|-----------|-----------------------------------------|----|
+| ref_seq        | int       | row별 식별자 값                              | PK |
+| firstInfoId    | int       | firstInfo Table의 firstIdInfo 값을 외래키로 지정 | FK |
 | main_category_seq | int       | 대분류 카테고리 식별자                            | FK |
 | sub_category_seq | int | 중분류 카테고리 식별자                            | FK |
+|         keyword_seq       | int | 키워드 식별자                                 | FK |
 
 
 
