Logstash 정리 및 working_History 수정 , 테스트코드 수정

--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -1,4 +1,67 @@
 # Batch Project 사용방안
+## OverView
+RDB의 전체 데이터를 Springbatch가 일정 주기로 수집하여 ElasticSearch에 색인합니다.
+
+ElasticSearch 최종 색인 결과 기댓값은 다음과 같습니다.
+```bash
+{
+  "took" : 5,
+  "timed_out" : false,
+  "_shards" : {
+    "total" : 1,
+    "successful" : 1,
+    "skipped" : 0,
+    "failed" : 0
+  },
+  "hits" : {
+    "total" : {
+      "value" : 10,
+      "relation" : "eq"
+    },
+    "max_score" : 1.0,
+    "hits" : [
+      {
+        "_index" : "info_index_new",
+        "_id" : "qZvUsIoBagFv11qEo-v_",
+        "_score" : 1.0,
+        "_source" : {
+          "firstInfoId" : 1,
+          "name" : "1_사진",
+          "age" : 30,
+          "keyword" : [
+            "새벽",
+            "자연"
+          ],
+          "categories" : [
+            {
+              "main_category" : "사진",
+              "sub_category" : "일반인"
+            }
+          ]
+        }
+      },
+      {
+        "_index" : "info_index_new",
+        "_id" : "ppvUsIoBagFv11qEo-v_",
+        "_score" : 1.0,
+        "_source" : {
+          "firstInfoId" : 0,
+          "name" : "1_영상",
+          "age" : 11,
+          "keyword" : [
+            "밤"
+          ],
+          "categories" : [
+            {
+              "main_category" : "영상",
+              "sub_category" : "전문가"
+            }
+          ]
+        }
+      },
+  ...계속...
+```
+
 ## 사전 사항 - elasticsearch 구축
 elastic Search를 아래 문서를 따라 구축합니다.
 
@@ -52,11 +115,16 @@ batch 생성 스키마 정리
 ElasticSearch 형태소분석 참고문서
 - https://esbook.kimjmin.net/06-text-analysis/6.7-stemming/6.7.2-nori
 
-## RDB Table 정보
+## RDB 정보
 전체 정보 테이블과 , 대분류 카테고리 테이블, 중분류 카테고리 테이블로 나뉩니다.
 
 이 세가지 테이블을 Join하여 ElasticSearch에 색인할 예정입니다.
 >차후 고정된 대분류와 중분류가 늘어나거나 줄어들 수 있기 떄문에 , 카테고리값만을 관리하는 테이블을 생성하고, 둘을 연결짓는 테이블로 나누었습니다.
+
+또한 , 각 문서별로 keyword가 여러개 있을 수 있기 때문에, Reader에서 쿼리를 두번 수행합니다.
+- 1. fisrtInfoId, keyword 조회
+- 2. 전체정보 조회
+
 
 ### 1. firstInfo Table
 - 실제 데이터값이 저장되는 테이블 입니다.
@@ -105,32 +173,64 @@ ElasticSearch 형태소분석 참고문서
 
 
 ### Join Query
-- 수행할 Join Query는 다음과 같습니다.
+- 수행할 Join Query는 다음 두가지입니다.
+1. 전체 정보 (firstInfoId, name, age, main_category, sub_category) 를 조인 해서 가져오는 쿼리
+2. 부분 정보 (firstInfoId, keyword) 를 조인 해서 가져오는 쿼리
+   
+2번의 쿼리를 수행하여 firstInfoId값에 대응되는 keyword를 수집하여 , 
 
+실제 1번 쿼리를 수행하고 entity를 생상할 때 , 같은 firstInfoId의 row는 keyword를 묶도록 작성하였습니다.
+- [실제 코드](./src/main/java/com/example/indexinitbatch/elasticIndexing/Service/Reader/RdbReaderImpl.java)
+
+- 1의 수행 쿼리
 ```Query
-SELECT
-    f.firstInfoId,
-    f.name as '이름',
-    f.age as '나이',
-    m.main_category as '대분류',
-    s.sub_category as '중분류'
-FROM
-    firstInfo f
+select firstInfo.firstInfoId,
+       name,
+       age,
+       main.main_category,
+       sub.sub_category,
+       word.keyword
+from
+    firstInfo
         JOIN
-    tb_ref r ON f.firstInfoId = r.firstInfoId
+    tb_ref ON firstInfo.firstInfoId = tb_ref.firstInfoId
         JOIN
-    tb_main_category m ON r.main_category_seq = m.main_category_seq
+    tb_main_category main ON tb_ref.main_category_seq = main.main_category_seq
         JOIN
-    tb_sub_category s ON r.sub_category_seq = s.sub_category_seq
-ORDER BY firstInfoId ASC;
+    tb_sub_category sub on tb_ref.sub_category_seq = sub.sub_category_seq
+        JOIN
+    tb_keyword word on tb_ref.keyword_seq = word.keyword_seq;
 ```
-- 쿼리 수행 결과는 다음과 같습니다.
 
-| firstInfoId | 이름   | 나이 | 대분류 | 중분류   |
-|-------------|------|----|-----|-------|
-| 0           | 감자깡  | 15 | 간식  | 과자    |
-| 1           | 새우깡  | 50 | 간식  | 과자    |
-| 2           | 애플워치 | 7  | 시계  | 스마트워치 |
+- 1의 쿼리 수행 결과는 다음과 같습니다.
+
+| firstInfoId | name | age | main_category | sub_category | keyword |
+|-------------|------|-----|---------------|--------------|---------|
+| 4           | 2_사진 | 122 | 사진            | 전문가           | 맛있다     |
+| 4           | 2_사진 | 122 | 사진            | 전문가           | 힐링이다    |
+| 0           | 1_영상 | 11  | 영상            | 전문가          | 밤       |
+...
+
+
+- 2의 수행 쿼리
+```Query
+select
+    firstInfo.firstInfoId,
+    word.keyword
+from
+    firstInfo
+        JOIN
+    tb_ref ON firstInfo.firstInfoId = tb_ref.firstInfoId
+        JOIN
+    tb_keyword word on tb_ref.keyword_seq = word.keyword_seq;
+```
+- 2의 쿼리 수행 결과는 다음과 같습니다.
+
+| firstInfoId | keyword |
+|-------------|---------|
+| 4           | 맛있다     |
+| 4           | 힐링이다    |
+| 0           | 밤       |
 ...
 
 
@@ -260,10 +360,19 @@ GET _analyze
 }
 ```
 
-### index 생성
+### index 정의
 nori tokenizer를 사용하는 index를 생성합니다.
 - 인덱스 명 : info_index
 
+#### 요구사항 정의
+elasticSearch index에 대해 기대되는 요구사항은 다음과 같습니다.
+- name , age , 대 / 중 분류 category 검색이 가능
+  - 대 분류 : 영상 | 사진
+  - 중 분류 : 일반인 | 전문가
+- 키워드별 검색 가능
+  - 키워드는 무한대로 늘어날 수 있음
+
+#### index 생성
 각 파라미터별 설명은 다음과 같습니다.
 - analysis의 analyzer를 custom type으로 지정 , tokenizer nori_tokenizer 지정,
 - nori_tokenizer decompound_mode를 mixed로 지정
@@ -272,13 +381,7 @@ nori tokenizer를 사용하는 index를 생성합니다.
 - ***category*** 필드를 ***nested*** 타입으로 지정
   - nested 타입으로 지정함으로써, main_category와 sub_category를 계층적 구조로 검색할 수 있게끔 구성
   - [nested 타입이란?](https://esbook.kimjmin.net/07-settings-and-mappings/7.2-mappings/7.2.5-object-nested#nested)
-- name , age , 대 / 중 분류 category 검색이 가능
-  - category가 과자 라면 , 과자입니다 검색했을경우에 과자 추출
-  - name이 주진성 이라면 , 주진성2, 주진성이다. 주진성입니다 검색했을 경우 주진성 추출
-  - 과자 주진성 모두 검색하면 , 과자 카테고리 및 주진성 이름 추출
-  - 간식 이면서 과자인 문서 검색가능
-  - 간식들 검색 가능
-  - 과자들 검색 가능
+
 ```bash
 PUT info_index
 {
