사용방안 수정

--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -92,6 +92,11 @@ logstash를 아래 문서를 따라 구축합니다.
 
 - [LogStash 도입기](../../../../DevOps_solutions/Elastic_모음/Logstash/Logstash_docker_install.md)
 
+### Logstash pipeline 구축
+ElasticSearch의 색인된 데이터 중 , 중복된 문서를 제거하기 위해 Logstash 구성 파일 및 pipeline을 구축합니다.
+
+- [ElasticSearch 중복값 제거 pipeline](../../../../DevOps_solutions/Elastic_모음/Logstash/Pipeline/ElasticSearch_중복값_제거.md)
+
 ## overview
 - elasticsearch bulk vs save
 
