ElasticSearch 검색조건 요구사항 추가

--- a/working_History/README_모음/검색엔진_기능_구축.md
+++ b/working_History/README_모음/검색엔진_기능_구축.md
@@ -123,10 +123,15 @@ reader 또는 processer에 reader에서 select 해온 row들을 모두 순회하
 - 그렇다고 청크를 무제한으로 둔다는것은 중복데이터를 정재하기위해 속도나 리소스 사용량등 모든것을 포기하는 것이기 때문입니다.
 
 따라서 ***Logstash***를 도입하여 ElasticSearch에 적재된 데이터를 정재하는 방안으로 진행하였습니다.
-- [Logstash 설치방안 및 기본 사용방안]()
-- [요구사항에 맞게끔 Logstash 도입하여 필터링 하는 도입기]()
+- [Logstash 설치방안 및 기본 사용방안](../../DevOps_solutions/Elastic_모음/Logstash/Logstash_docker_install.md)
+- [요구사항에 맞게끔 Logstash 도입하여 필터링 하는 도입기](../../DevOps_solutions/Elastic_모음/Logstash/Pipeline/ElasticSearch_중복값_제거.md)
 
 목적은 : ***Logstash*** 를 통해, ElasticSearch에 적재된 모든 데이터들을 대상으로 firstInfoId를 기준으로 fiter를 걸어서, 중복값을 제거하려 합니다.
+
+#### 해결방안 변경!!!!
+Logstash를 사용하지 않고, **Springbatch 코드상에서 중복값을 제거합니다.**
+
+이것이 가능해진 이유는, **select의 주체가 타 API에서 수행하고, Springbatch에선 해당 API를 통해 Select된 결과를 ResponseBody로 가져오는 로직으로 수정하였기 때문입니다.**
 
 ### 고려해야될 사항 및 추가 개발사항
 **1. 카테고리 종류**
