upsert방식으로 수정

--- a/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
+++ b/working_History/BackEnd_Spring/searchFunctionTest/allIndexInitBatch/사용방안.md
@@ -573,6 +573,8 @@ Processor 계층에서 변환된 InfoDtoIndex 엔티티들을 모두 elasticSear
 >bulk : 여러개 데이터 (대량) 를 색인하기 위해 설계됨
 >
 >위 테스트 코드는 RDB의 전체 데이터를 색인하기 때문에 , bulk 사용
+> 
+>또한 색인 시 , upsert 방식을 사용하여 기존 doc이 있다면 덮어쓰여지도록 하여 중복된 데이터가 없도록 수정합니다.
 
 - [Writer Code](./src/main/java/com/example/indexinitbatch/elasticIndexing/Service/Batch/Writer/Version_7_IndexWriterImpl.java)
 
@@ -588,6 +590,9 @@ Processor 계층에서 변환된 InfoDtoIndex 엔티티들을 모두 elasticSear
 >bulk : 여러개 데이터 (대량) 를 색인하기 위해 설계됨
 >
 >위 테스트 코드는 RDB의 전체 데이터를 색인하기 때문에 , bulk 사용
+>
+>또한 색인 시 , upsert 방식을 사용하여 기존 doc이 있다면 덮어쓰여지도록 하여 중복된 데이터가 없도록 수정합니다. 
+>Version8에선 upsert관련 코드가 작성 전에 있습니다.
 
 - [Writer Code](./src/main/java/com/example/indexinitbatch/elasticIndexing/Service/Batch/Writer/Version_8_IndexWriterImpl.java)
 
