실시간검색순위 기능 구축

--- a/working_History/README_모음/실시간_검색순위_기능구축.md
+++ b/working_History/README_모음/실시간_검색순위_기능구축.md
@@ -1,3 +1,85 @@
 # 실시간 검색순위 기능 구축방안
 ## Overview
-특정 시간(24시간 .. 등 )동안 검색이 많이 일어난 키워드들을 100개 추출하는 요구사항을 해결했던 방법을 기술합니다.
+특정 시간(24시간 .. 등 )동안 검색이 많이 일어난 카테고리들을 100개 추출하는 요구사항을 해결했던 방법을 기술합니다.
+
+## Architecture
+순서는 다음과 같습니다.
+
+### 1. 검색 로그 적재
+1. Backend API 서버로 키워드 검색요청
+2. 요청된 검색값(category)과 요청시간(timestamp) 를 ElasticSearch에 로그로 적재
+
+### 2. Hot chart 검색
+1. 인기 검색어 요청 시, 1번에서 적재한 로그들을 대상으로, 쿼리에 1시간 계산하여 검색
+2. 1시간 지나면 logstash나 SpringBatch Application을 통해 ElasticSearch에 적재된 로그 제거
+
+## 구현
+### 1. 검색로그적재
+아래와 같은 index를 ElasticSearch에 template으로 등록해 둡니다.
+
+```bash
+PUT /searchLog
+{
+  "mappings": {
+    "properties": {
+      "search_term": {
+        "type": "text",
+        "fields": {
+          "category": {
+            "type": "keyword"
+          }
+        }
+      },
+      "timestamp": {
+        "type": "date",
+        "format": "epoch_millis"
+      }
+    }
+  }
+}
+```
+
+검색 요청이 들어왔을 때, 해당 index에 요청값과 timestamp 값을 색인합니다.
+
+### 2. 로그 색인된 index로 쿼리질의
+1시간 단위로 검색양이 가장 많은 카테고리를 내림차순 정렬합니다.
+- 인기 상위 10개 추출합니다.
+
+```java
+GET /searchLog/_search
+{
+  "size": 0,
+  "aggs": {
+    "recent_searches": {
+      "filter": {
+        "range": {
+          "timestamp": {
+            "gte": "now-1h/h",
+            "lte": "now/h"
+          }
+        }
+      },
+      "aggs": {
+        "top_search_terms": {
+          "terms": {
+            "field": "search_term.category",
+            "size": 10
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+### 3. 인덱스 정리
+1시간 주기로 작동하는 배치형 Application 또는 crontab 등을 통해 해당 index에 적재된 로그를 제거합니다.
+
+```bash
+curl -X POST "localhost:9200/searchLog/_delete_by_query" -H "Content-Type: application/json" -d'
+{
+  "query": {
+    "match_all": {}
+  }
+}'
+```
