--- a/EKS/EKS_One_Click/README
+++ b/EKS/EKS_One_Click/README
@@ -49,3 +49,27 @@ ssh -i ~/.ssh/jinseongTest.pem ec2-user@$(aws cloudformation describe-stacks --s
 ```bash
 eksctl delete cluster --name $CLUSTER_NAME && aws cloudformation delete-stack --stack-name $CLUSTER_NAME
 ```
+
+## ETC
+- 생성 실패시 cloudformation describe 하여 에러원인 파악 후 해결
+```bash
+# 전체 스택 이벤트 확인
+aws cloudformation describe-stack-events --stack-name myeks
+
+# 실패한 이벤트만 확인
+aws cloudformation describe-stack-events --stack-name myeks --query 'StackEvents[?contains(ResourceStatus, `FAILED`)]'
+```
+
+- AWS Load Balancer Controller 설치
+```bash
+# 설치
+helm repo add eks https://aws.github.io/eks-charts
+helm repo update
+helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
+  --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller
+
+# 설치 확인
+kubectl get all -n kube-system aws-load-balancer-controller
+```
+
+- ExternalDNS 설치
