working history 최신화 및 README 수정 - Todolist 작성

--- a/working_History/README_모음/검색엔진_기능_구축.md
+++ b/working_History/README_모음/검색엔진_기능_구축.md
@@ -263,3 +263,26 @@ bulk API를 사용한다면 아래와 같은 이점을 가질 수 있습니다.
 - 일반 색인과 다르게 대량의 문서를 한번에 호출로 elasticSearch에 색인하기 때문에 , 속도가 훨씬 빠릅니다.
 - 다수 인덱스를 색인하려고 여러번 elasticsearch를 호출하지 않기 때문에 , 네트워크 오버헤드를 최소화할 수 있습니다.
 - Bulk API를 사용하여 인덱스, 업데이트, 삭제 작업을 혼합하여 실행할 수 있습니다.
+
+## ElasticSearch Scroll API 도입기
+다른 검색들은, 무한스크롤 기능을 구현하기 위해 정수값을 가지는 특정 ID를 ```search_After``` API로 구현했습니다.
+- 예를들어, 현재 페이지의 ID가 0 - 9 까지라면 , 다음 요청에 ID값인 9를 ES 검색 쿼리에 ```search_After```를 추가하여, ID 9 다음 10부터 9개인 18까지 가져오는 형식
+
+그런데, 위치기반검색에는 달랏습니다.
+
+만약 요구사항이 다음과 같다고 생각해봅시다.
+- 검색된 위치 반경 3KM의 콘텐츠를 추출
+
+이 요구사항에 ```search_After``` API를 사용하면, 한번에 모든 콘텐츠를 추출할 수 없을것입니다.
+- 다음 요청이들어가야 그다음 콘텐츠들이 꺼내와지기 때문
+
+따라서 단순히 쿼리의 size를 무제한으로 둘까 했는데, ElasticSearch는 검색 성능 향상을 위해, 쿼리에 size를 무제한으로 둘 수 없는 구조인것을 알 수 있었습니다.
+또한 size값을 10,000 과 같은 큰 값을 두면, 그값보다 커질경우 넣은 값의 다음콘텐츠는 추출될 수 없으며, 기본적으로 **ElasticSearch의 index에서 꺼내올 수 있는 doc의 size는 default 10,000**으로 되어있음을 알 수 있었습니다.
+해당 값을 강제로 크게 둘 수 있겠지만, 해당 요구사항을 충족시키기엔 부족합니다.
+
+따라서 ```Scroll API``` 를 도입하였습니다.
+
+```Scroll API``` 를 간단히 설명하면, ES의 search API로 index 내의 doc을 검색할 경우, ScrollId를 가져올 수 있는데, 해당 값을 통해서 특정 시간동안 계속해서 요청을 보내며 index의 값을 가져오는 API 입니다.
+- 예를들어 Scroll time을 1분으로 설정해두면, 1분동안 검색 타겟이 되는 index의 doc을 계속해서 가져옵니다.
+
+- [Scroll API 사용법 및 Java 코딩방안](../../DevOps_solutions/Elastic_모음/ElasticSearch/ElasticSearch_Scroll_API.md)
