--- a/working_History/README_모음/검색엔진_기능_구축.md
+++ b/working_History/README_모음/검색엔진_기능_구축.md
@@ -3,6 +3,7 @@ title: ElasticSearch를 통한 검색엔진 기능 개발기
 subtitle: ElasticSearch를 통한 서비스 검색엔진 기능 개발기
 tags: aws, aws-lambda, architecture, elasticsearch
 domain: jjsair0412.hashnode.dev
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1711892822301/DL2GXNNfJ.png?auto=format
 ---
 
 
